# result-rs

./: .travis.yml  Cargo.toml  README.md  search-index.js
implementors/result/: trait.ResultIteratorExt.js
result/: ResultIteratorExt.t.html  ResultOptionExt.t.html  index.html  sidebar-items.js  trait.OptionResultExt.html  trait.ResultIteratorExt.html  trait.ResultOptionExt.html
result/prelude/: index.html
src/: lib.rs
src/result/: lib.rs.html
src/result/src/: lib.rs.html
